@@ -15,27 +15,32 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 # USA
 
-from library import LibraryInMemorySuite
-from executable import ExecutableInMemorySuite
-from relocated_header_inmem import RelocatedHeaderInMemorySuite
-from complete_package_inmem import CompletePackageInMemorySuite
-from libtool import LibtoolInMemorySuite
-from check_inmem import CheckProgramInMemorySuite
+from check import CheckProgramBase
 
 import unittest
 
-class ExplicitCSetupInMemorySuite(unittest.TestSuite):
+class CheckProgramInMemorySuite(unittest.TestSuite):
     def __init__(self):
         unittest.TestSuite.__init__(self)
-        self.addTest(LibraryInMemorySuite())
-        self.addTest(ExecutableInMemorySuite())
-        self.addTest(RelocatedHeaderInMemorySuite())
-        self.addTest(CompletePackageInMemorySuite())
-        self.addTest(LibtoolInMemorySuite())
-        self.addTest(CheckProgramInMemorySuite())
+        self.addTest(CheckProgramInMemory('test'))
+        pass
+    pass
+
+class CheckProgramInMemory(CheckProgramBase):
+    def __init__(self, methodName):
+        CheckProgramBase.__init__(self, methodName)
+        pass
+
+    def use_libtool(self): return False
+
+    def test(self):
+        self.failUnless('the-test-program' in self.package_.rootbuilder().makefile_am().check_programs())
+        self.failUnlessEqual(len(self.package_.rootbuilder().makefile_am().tests_environment()), 1)
+        self.failUnlessEqual(self.package_.rootbuilder().makefile_am().tests_environment()['name'], 'value')
         pass
     pass
 
 if __name__ == '__main__':
-    unittest.TextTestRunner().run(ExplicitCSetupInMemorySuite())
+    unittest.TextTestRunner().run(CheckProgramInMemorySuite())
     pass
+
